Wrote abstract and started writing intro

--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,28 @@
-%Capitalization is very important in references. Be sure to do a double {{ and }} to keep the capitalization of your text in tact.
-%Also pay attention to the sorting on last name in the case of complex Dutch names. F.i.: "Aalst, W.M.P. van der and ..." makes it sort under A
-@MASTERSTHESIS{MScBuijs2010,
-  author = {Buijs, J.C.A.M.},
-  title = {{Mapping Data Sources to XES in a Generic Way}},
-  school = {{Eindhoven University of Technology}},
-  year = {2010},
-  file = {Master thesis Joos 2010:C\:\\Users\\jbuijs.TUE\\Documents\\PhD\\Resources\\thesis_JBuijs_final.pdf:PDF},
-  keywords = {XES, event log, data, joos, master thesis},
-  url = {http://www.processmining.org/_media/xesame/xesma_thesis_final.pdf}
+@article{sahu2017ubiquity,
+  title={The ubiquity of large graphs and surprising challenges of graph processing},
+  author={Sahu, Siddhartha and Mhedhbi, Amine and Salihoglu, Semih and Lin, Jimmy and {\"O}zsu, M Tamer},
+  journal={Proceedings of the VLDB Endowment},
+  volume={11},
+  number={4},
+  pages={420--431},
+  year={2017},
+  publisher={VLDB Endowment}
 }
-
-@MASTERSTHESIS{MScNugteren2010,
-  author = {Nugteren, G.M.},
-  title = {{Process Model Simplification}},
-  school = {{Eindhoven University of Technology}},
-  year = {2010},
-  url = {http://alexandria.tue.nl/extra1/afstversl/wsk-i/nugteren2010.pdf}
+@misc{awsS3,
+  author = {AWS},
+  title = {AWS S3},
+  howpublished = {\url{https://aws.amazon.com/s3/}},
+  urldate = {2024-07-27}
+}
+@misc{gcpStorage,
+  author = {Google Cloud Platform},
+  title = {Google Cloud Storage},
+  howpublished = {\url{https://cloud.google.com/storage}},
+  urldate = {2024-07-27}
+}
+@misc{azureStorage,
+  author = {Azure},
+  title = {Azure Blob storage},
+  howpublished = {\url{https://azure.microsoft.com/en-us/products/storage/blobs}},
+  urldate = {2024-07-27}
 }
