--- a/titlepage.tex
+++ b/titlepage.tex
@@ -5,7 +5,7 @@
 %Eindhoven University of Technology \\
 \large
 Department of Mathematics and Computer Science  \\
-Architecture of Information Systems Research Group
+Database Group
 
 \vspace*{10cm}
 
@@ -39,8 +39,8 @@ Supervisors:\\
     \thirdCommitteeMember\\
 \end{tabular}
 
-\vfill
-\version
+%\vfill
+%\version
 
 \vfill
 %\docdate \\
