--- a/thesis.tex
+++ b/thesis.tex
@@ -15,18 +15,18 @@
 % These commands need to be defined in order to produce a correct and personalized document
 %
 \newcommand{\shortdoctitle}{Master's Thesis}
-\newcommand{\doctitle}{My Thesis Title}
+\newcommand{\doctitle}{Efficient Graph Processing Using AWS S3}
 \newcommand{\docsubtitle}{Master Thesis}
 
-\newcommand{\me}{My Name}
-\newcommand{\keywords}{keyword1, keyword2, keyword3}
-\newcommand{\version}{EMPTY version}
-\newcommand{\monthYear}{Month 201X}
+\newcommand{\me}{Aditya Chandla}
+\newcommand{\keywords}{Graph Databases, Serverless}
+\newcommand{\version}{1.0}
+\newcommand{\monthYear}{July 2024}
 
 %Be sure to use all the titles for your committee members!!! (their names show up on the very first page!)
-\newcommand{\firstCommitteeMember}{Your First Committee Member}
-\newcommand{\secondCommitteeMember}{Your second Committee Member, usually the daily supervisor}
-\newcommand{\thirdCommitteeMember}{Your Third Committee Member, usually the external member}
+\newcommand{\firstCommitteeMember}{dr. Nikolay Yakovets}
+%\newcommand{\secondCommitteeMember}{Your second Committee Member, usually the daily supervisor}
+%\newcommand{\thirdCommitteeMember}{Your Third Committee Member, usually the external member}
 
 \author{\me}
 
