Wrote one part of introduction

--- a/references.bib
+++ b/references.bib
@@ -26,3 +26,21 @@
   howpublished = {\url{https://azure.microsoft.com/en-us/products/storage/blobs}},
   urldate = {2024-07-27}
 }
+@misc{neonPostgres,
+  author = {Neon},
+  title = {Neon},
+  howpublished = {\url{https://neon.tech/}},
+  urldate = {2024-07-27}
+}
+@misc{snowflake,
+  author = {Snowflake},
+  title = {Snowflake},
+  howpublished = {\url{https://www.snowflake.com/en/}},
+  urldate = {2024-07-27}
+}
+@misc{flink,
+  author = {Apache Software Foundation},
+  title = {Apache Flink},
+  howpublished = {\url{https://flink.apache.org/}},
+  urldate = {2024-07-27}
+}
