--- a/thesis.tex
+++ b/thesis.tex
@@ -107,17 +107,17 @@
 
 \clearemptydoublepage
 
-\chapter{First Real Chapter}\label{chapter:first_real_chapter}
-\input{chapters/first_real_chapter}
+\chapter{Experimental Evaluation}\label{chapter:experimentalEvaluation}
+\input{chapters/experimental_evaluation}
 
 \clearemptydoublepage
 
-\chapter{Second Real Chapter}\label{chapter:second_real_chapter}
-\input{chapters/second_real_chapter}
+\chapter{Comparisons}\label{chapter:comparisons}
+\input{chapters/comparisons.tex}
 
 \clearemptydoublepage
 
-\chapter{Conclusions}\label{chapter:conclusions}
+\chapter{Conclusion and Future Work}\label{chapter:conclusions}
 \input{chapters/conclusions}
 
 \clearemptydoublepage
