Changed the structure

--- a/thesis.tex
+++ b/thesis.tex
@@ -62,7 +62,7 @@
 %\input{chapters/brainstorm_results}
 
 \chapter*{Abstract}\label{chapter:abstract}
-\input{chapters/abstract}
+\input{chapters/1_abstract}
 
 \clearemptydoublepage
 
@@ -74,7 +74,7 @@
 
 
 \chapter*{Preface}\label{chapter:preface}
-\input{chapters/preface}
+\input{chapters/2_preface}
 
 \clearemptydoublepage
 
@@ -98,27 +98,33 @@
 \setcounter{page}{0}
 \pagenumbering{arabic}
 %from here on, start the 'real' page numbering, from 1, with normal digits
-\input{chapters/introduction}
+\input{chapters/3_introduction}
 
 \clearemptydoublepage
 
 \chapter{Preliminaries}\label{chapter:preliminaries}
-\input{chapters/preliminaries}
+\input{chapters/4_preliminaries}
 
 \clearemptydoublepage
 
-\chapter{Experimental Evaluation}\label{chapter:experimentalEvaluation}
-\input{chapters/experimental_evaluation}
+\chapter{System Architecture}\label{chapter:systemArchitecture}
+\input{chapters/5_system_architecture}
 
 \clearemptydoublepage
 
-\chapter{Comparisons}\label{chapter:comparisons}
-\input{chapters/comparisons.tex}
+\chapter{Evaluation}\label{chapter:evaluation}
+\input{chapters/6_evaluation}
+
+\clearemptydoublepage
+
+% This can become the discussions section instead of comparisons.
+\chapter{Discussion}\label{chapter:discussion}
+\input{chapters/7_discussion}
 
 \clearemptydoublepage
 
 \chapter{Conclusion and Future Work}\label{chapter:conclusions}
-\input{chapters/conclusions}
+\input{chapters/8_conclusions}
 
 \clearemptydoublepage
 
