Distributed fs and serverless databases

--- a/references.bib
+++ b/references.bib
@@ -1,13 +1,3 @@
-@article{sahu2017ubiquity,
-  title={The ubiquity of large graphs and surprising challenges of graph processing},
-  author={Sahu, Siddhartha and Mhedhbi, Amine and Salihoglu, Semih and Lin, Jimmy and {\"O}zsu, M Tamer},
-  journal={Proceedings of the VLDB Endowment},
-  volume={11},
-  number={4},
-  pages={420--431},
-  year={2017},
-  publisher={VLDB Endowment}
-}
 @misc{awsS3,
   author = {AWS},
   title = {AWS S3},
@@ -43,4 +33,263 @@
   title = {Apache Flink},
   howpublished = {\url{https://flink.apache.org/}},
   urldate = {2024-07-27}
+}
+
+@article{al2019predicting,
+  title={Predicting customer’s gender and age depending on mobile phone data},
+  author={Al-Zuabi, Ibrahim Mousa and Jafar, Assef and Aljoumaa, Kadan},
+  journal={Journal of Big Data},
+  volume={6},
+  number={1},
+  pages={1--16},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{alotaibi2020applications,
+  title={Applications of artificial intelligence and big data analytics in m-Health: a healthcare system perspective},
+  author={Alotaibi, Sultan Refa and others},
+  journal={Journal of Healthcare Engineering},
+  volume={2020},
+  year={2020},
+  publisher={Hindawi}
+}
+
+@article{arias2016scalable,
+  title={A scalable pairwise class interaction framework for multidimensional classification},
+  author={Arias, Jacinto and Gamez, Jose A and Nielsen, Thomas D and Puerta, Jose M},
+  journal={International Journal of Approximate Reasoning},
+  volume={68},
+  pages={194--210},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{batal2013efficient,
+  title={An efficient probabilistic framework for multi-dimensional classification},
+  author={Batal, Iyad and Hong, Charmgil and Hauskrecht, Milos},
+  booktitle={Proceedings of the 22nd ACM international conference on Information \& Knowledge Management (CIKM)},
+  pages={2417--2422},
+  year={2013}
+}
+
+
+@inproceedings{bi2013inferring,
+  title={Inferring the demographics of search users: Social data meets search queries},
+  author={Bi, Bin and Shokouhi, Milad and Kosinski, Michal and Graepel, Thore},
+  booktitle={Proceedings of the 22nd international conference on World Wide Web (WWW)},
+  pages={131--140},
+  year={2013}
+}
+
+@article{bielza2011multi,
+  title={Multi-dimensional classification with Bayesian networks},
+  author={Bielza, Concha and Li, Guangdi and Larranaga, Pedro},
+  journal={International Journal of Approximate Reasoning},
+  volume={52},
+  number={6},
+  pages={705--727},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{sahu2017ubiquity,
+  title={The ubiquity of large graphs and surprising challenges of graph processing},
+  author={Sahu, Siddhartha and Mhedhbi, Amine and Salihoglu, Semih and Lin, Jimmy and {\"O}zsu, M Tamer},
+  journal={Proceedings of the VLDB Endowment},
+  volume={11},
+  number={4},
+  pages={420--431},
+  year={2017},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{verbitski2017amazon,
+  title={Amazon aurora: Design considerations for high throughput cloud-native relational databases},
+  author={Verbitski, Alexandre and Gupta, Anurag and Saha, Debanjan and Brahmadesam, Murali and Gupta, Kamal and Mittal, Raman and Krishnamurthy, Sailesh and Maurice, Sandor and Kharatishvili, Tengiz and Bao, Xiaofeng},
+  booktitle={Proceedings of the 2017 ACM International Conference on Management of Data},
+  pages={1041--1052},
+  year={2017},
+  notes={Aurora paper,OLTP with independent storage and compute}
+}
+
+@book{jaja1992introduction,
+  title={An introduction to parallel algorithms},
+  author={J{\'a}J{\'a}, Joseph},
+  year={1992},
+  publisher={Addison Wesley Longman Publishing Co., Inc.},
+  notes={Info about PRAM model of computation}
+}
+
+@inproceedings{brantner2008building,
+  title={Building a database on S3},
+  author={Brantner, Matthias and Florescu, Daniela and Graf, David and Kossmann, Donald and Kraska, Tim},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={251--264},
+  year={2008},
+  notes={The original one}
+}
+
+@inproceedings{dageville2016snowflake,
+  title={The snowflake elastic data warehouse},
+  author={Dageville, Benoit and Cruanes, Thierry and Zukowski, Marcin and Antonov, Vadim and Avanes, Artin and Bock, Jon and Claybaugh, Jonathan and Engovatov, Daniel and Hentschel, Martin and Huang, Jiansheng and others},
+  booktitle={Proceedings of the 2016 International Conference on Management of Data},
+  pages={215--226},
+  year={2016},
+  notes={Snowflake architecture}
+}
+
+@article{besta2023demystifying,
+  title={Demystifying graph databases: Analysis and taxonomy of data organization, system designs, and graph queries},
+  author={Besta, Maciej and Gerstenberger, Robert and Peter, Emanuel and Fischer, Marc and Podstawski, Micha{\l} and Barthels, Claude and Alonso, Gustavo and Hoefler, Torsten},
+  journal={ACM Computing Surveys},
+  volume={56},
+  number={2},
+  pages={1--40},
+  year={2023},
+  publisher={ACM New York, NY}
+}
+@misc{neo4jReq,
+  author = {Neo4J},
+  title = {Neo4J database hardware requirements},
+  howpublished = {\url{https://neo4j.com/docs/operations-manual/current/installation/requirements/}},
+  urldate = {2023-09-30}
+}
+@misc{neptune,
+  author = {AWS},
+  title = {AWS Neptune Db},
+  howpublished = {\url{https://aws.amazon.com/neptune/}},
+  urldate = {2023-09-30}
+}
+@misc{s3fsFuse,
+  author = {Github},
+  title = {Fuse AWS S3},
+  howpublished = {\url{https://github.com/s3fs-fuse/s3fs-fuse}},
+  urldate = {2023-09-30}
+}
+@book{george1981computer,
+  title={Computer solution of large sparse positive definite},
+  author={George, Alan and Liu, Joseph W},
+  year={1981},
+  publisher={Prentice Hall Professional Technical Reference}
+}
+@article{ali2011survey,
+  title={A survey of web caching and prefetching},
+  author={Ali, Waleed and Shamsuddin, Siti Mariyam and Ismail, Abdul Samad and others},
+  journal={Int. J. Advance. Soft Comput. Appl},
+  volume={3},
+  number={1},
+  pages={18--44},
+  year={2011},
+  publisher={Citeseer}
+}
+@article{mittal2016survey,
+  title={A survey of recent prefetching techniques for processor caches},
+  author={Mittal, Sparsh},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={49},
+  number={2},
+  pages={1--35},
+  year={2016},
+  publisher={ACM New York, NY, USA}
+}
+@article{smith1978sequentiality,
+  title={Sequentiality and prefetching in database systems},
+  author={Smith, Alan Jay},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={3},
+  number={3},
+  pages={223--247},
+  year={1978},
+  publisher={ACM New York, NY, USA}
+}
+@article{smith1978sequential,
+  title={Sequential program prefetching in memory hierarchies},
+  author={Smith, Alan Jay},
+  journal={Computer},
+  volume={11},
+  number={12},
+  pages={7--21},
+  year={1978},
+  publisher={IEEE Computer Society}
+}
+@inproceedings{chilimbi2002dynamic,
+  title={Dynamic hot data stream prefetching for general-purpose programs},
+  author={Chilimbi, Trishul M and Hirzel, Martin},
+  booktitle={Proceedings of the ACM SIGPLAN 2002 Conference on Programming language design and implementation},
+  pages={199--209},
+  year={2002}
+}
+@article{jouppi1990improving,
+  title={Improving direct-mapped cache performance by the addition of a small fully-associative cache and prefetch buffers},
+  author={Jouppi, Norman P},
+  journal={ACM SIGARCH Computer Architecture News},
+  volume={18},
+  number={2SI},
+  pages={364--373},
+  year={1990},
+  publisher={ACM New York, NY, USA}
+}
+@inproceedings{joseph1997prefetching,
+  title={Prefetching using markov predictors},
+  author={Joseph, Doug and Grunwald, Dirk},
+  booktitle={Proceedings of the 24th annual international symposium on Computer architecture},
+  pages={252--263},
+  year={1997}
+}
+@inproceedings{lee1999existence,
+  title={On the existence of a spectrum of policies that subsumes the least recently used (LRU) and least frequently used (LFU) policies},
+  author={Lee, Donghee and Choi, Jongmoo and Kim, Jong-Hun and Noh, Sam H and Min, Sang Lyul and Cho, Yookun and Kim, Chong Sang},
+  booktitle={Proceedings of the 1999 ACM SIGMETRICS international conference on Measurement and modeling of computer systems},
+  pages={134--143},
+  year={1999}
+}
+@article{cui2003new,
+  title={A new hybrid approach to exploit localities: LRFU with adaptive prefetching},
+  author={Cui, Jike and Samadzadeh, Mansur H},
+  journal={ACM SIGMETRICS Performance Evaluation Review},
+  volume={31},
+  number={3},
+  pages={37--43},
+  year={2003},
+  publisher={ACM New York, NY, USA}
+}
+@inproceedings{aksu2015graph,
+  title={Graph aware caching policy for distributed graph stores},
+  author={Aksu, Hidayet and Canim, Mustafa and Chang, Yuan-Chi and Korpeoglu, Ibrahim and Ulusoy, {\"O}zg{\"u}r},
+  booktitle={2015 IEEE International Conference on Cloud Engineering},
+  pages={6--15},
+  year={2015},
+  organization={IEEE}
+}
+@article{bok2020memory,
+  title={In-memory caching for enhancing subgraph accessibility},
+  author={Bok, Kyoungsoo and Yoo, Seunghun and Choi, Dojin and Lim, Jongtae and Yoo, Jaesoo},
+  journal={Applied Sciences},
+  volume={10},
+  number={16},
+  pages={5507},
+  year={2020},
+  publisher={MDPI}
+}
+@inproceedings{ghemawat2003google,
+  title={The Google file system},
+  author={Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
+  booktitle={Proceedings of the nineteenth ACM symposium on Operating systems principles},
+  pages={29--43},
+  year={2003}
+}
+@misc{nfs1986,
+  title={Networking on the SUN Workstation},
+  author={SUN Microsystems},
+  year={1986},
+  publisher={SUN Microsystems}
+}
+@inproceedings{shvachko2010hadoop,
+  title={The hadoop distributed file system},
+  author={Shvachko, Konstantin and Kuang, Hairong and Radia, Sanjay and Chansler, Robert},
+  booktitle={2010 IEEE 26th symposium on mass storage systems and technologies (MSST)},
+  pages={1--10},
+  year={2010},
+  organization={Ieee}
 }
