--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,12 @@
   howpublished = {\url{https://aws.amazon.com/s3/}},
   urldate = {2024-07-27}
 }
+@misc{auroraServerless,
+  author = {AWS},
+  title = {AWS Aurora Serverless},
+  howpublished = {\url{https://aws.amazon.com/rds/aurora/serverless/}},
+  urldate = {2024-07-27}
+}
 @misc{gcpStorage,
   author = {Google Cloud Platform},
   title = {Google Cloud Storage},
@@ -292,4 +298,18 @@
   pages={1--10},
   year={2010},
   organization={Ieee}
+}
+@inproceedings{gupta2015amazon,
+  title={Amazon redshift and the case for simpler data warehouses},
+  author={Gupta, Anurag and Agarwal, Deepak and Tan, Derek and Kulesza, Jakub and Pathak, Rahul and Stefani, Stefano and Srinivasan, Vidhya},
+  booktitle={Proceedings of the 2015 ACM SIGMOD international conference on management of data},
+  pages={1917--1923},
+  year={2015}
+}
+@inproceedings{taft2020cockroachdb,
+  title={Cockroachdb: The resilient geo-distributed sql database},
+  author={Taft, Rebecca and Sharif, Irfan and Matei, Andrei and VanBenschoten, Nathan and Lewis, Jordan and Grieger, Tobias and Niemi, Kai and Woods, Andy and Birzin, Anne and Poss, Raphael and others},
+  booktitle={Proceedings of the 2020 ACM SIGMOD international conference on management of data},
+  pages={1493--1509},
+  year={2020}
 }
