Started caching and prefetching section

--- a/references.bib
+++ b/references.bib
@@ -313,3 +313,30 @@
   pages={1493--1509},
   year={2020}
 }
+@inproceedings{jiang2021fusionraid,
+  title={$\{$FusionRAID$\}$: Achieving Consistent Low Latency for Commodity $\{$SSD$\}$ Arrays},
+  author={Jiang, Tianyang and Zhang, Guangyan and Huang, Zican and Ma, Xiaosong and Wei, Junyu and Li, Zhiyue and Zheng, Weimin},
+  booktitle={19th USENIX Conference on File and Storage Technologies (FAST 21)},
+  pages={355--370},
+  year={2021}
+}
+@article{klein2010centrality,
+  title={Centrality measure in graphs},
+  author={Klein, Douglas J},
+  journal={Journal of mathematical chemistry},
+  volume={47},
+  number={4},
+  pages={1209--1223},
+  year={2010},
+  publisher={Springer}
+}
+@article{einziger2017tinylfu,
+  title={Tinylfu: A highly efficient cache admission policy},
+  author={Einziger, Gil and Friedman, Roy and Manes, Ben},
+  journal={ACM Transactions on Storage (ToS)},
+  volume={13},
+  number={4},
+  pages={1--31},
+  year={2017},
+  publisher={ACM New York, NY, USA}
+}
