--- a/thesis.tex
+++ b/thesis.tex
@@ -49,8 +49,6 @@
 
 \normalsize
 
-\clearemptydoublepage
-
 %Sometimes line numbers are nice, uncomment the next line to enable:
 %\linenumbers
 
@@ -76,23 +74,11 @@
 \chapter*{Preface}\label{chapter:preface}
 \input{chapters/2_preface}
 
-\clearemptydoublepage
+\clearpage
 
 \tableofcontents
 
-\clearemptydoublepage
-
-\listoffigures
-
-\clearemptydoublepage
-
-\listoftables
-
-\clearemptydoublepage
-
-\lstlistoflistings
-
-\clearemptydoublepage
+\clearpage
 
 \chapter{Introduction}\label{chapter:introduction}
 \setcounter{page}{0}
