Added research objectives and WIP preliminaries

--- a/references.bib
+++ b/references.bib
@@ -40,65 +40,6 @@
   howpublished = {\url{https://flink.apache.org/}},
   urldate = {2024-07-27}
 }
-
-@article{al2019predicting,
-  title={Predicting customer’s gender and age depending on mobile phone data},
-  author={Al-Zuabi, Ibrahim Mousa and Jafar, Assef and Aljoumaa, Kadan},
-  journal={Journal of Big Data},
-  volume={6},
-  number={1},
-  pages={1--16},
-  year={2019},
-  publisher={Springer}
-}
-
-@article{alotaibi2020applications,
-  title={Applications of artificial intelligence and big data analytics in m-Health: a healthcare system perspective},
-  author={Alotaibi, Sultan Refa and others},
-  journal={Journal of Healthcare Engineering},
-  volume={2020},
-  year={2020},
-  publisher={Hindawi}
-}
-
-@article{arias2016scalable,
-  title={A scalable pairwise class interaction framework for multidimensional classification},
-  author={Arias, Jacinto and Gamez, Jose A and Nielsen, Thomas D and Puerta, Jose M},
-  journal={International Journal of Approximate Reasoning},
-  volume={68},
-  pages={194--210},
-  year={2016},
-  publisher={Elsevier}
-}
-
-@inproceedings{batal2013efficient,
-  title={An efficient probabilistic framework for multi-dimensional classification},
-  author={Batal, Iyad and Hong, Charmgil and Hauskrecht, Milos},
-  booktitle={Proceedings of the 22nd ACM international conference on Information \& Knowledge Management (CIKM)},
-  pages={2417--2422},
-  year={2013}
-}
-
-
-@inproceedings{bi2013inferring,
-  title={Inferring the demographics of search users: Social data meets search queries},
-  author={Bi, Bin and Shokouhi, Milad and Kosinski, Michal and Graepel, Thore},
-  booktitle={Proceedings of the 22nd international conference on World Wide Web (WWW)},
-  pages={131--140},
-  year={2013}
-}
-
-@article{bielza2011multi,
-  title={Multi-dimensional classification with Bayesian networks},
-  author={Bielza, Concha and Li, Guangdi and Larranaga, Pedro},
-  journal={International Journal of Approximate Reasoning},
-  volume={52},
-  number={6},
-  pages={705--727},
-  year={2011},
-  publisher={Elsevier}
-}
-
 @article{sahu2017ubiquity,
   title={The ubiquity of large graphs and surprising challenges of graph processing},
   author={Sahu, Siddhartha and Mhedhbi, Amine and Salihoglu, Semih and Lin, Jimmy and {\"O}zsu, M Tamer},
@@ -250,15 +191,15 @@
   pages={134--143},
   year={1999}
 }
-@article{cui2003new,
-  title={A new hybrid approach to exploit localities: LRFU with adaptive prefetching},
-  author={Cui, Jike and Samadzadeh, Mansur H},
-  journal={ACM SIGMETRICS Performance Evaluation Review},
-  volume={31},
-  number={3},
-  pages={37--43},
-  year={2003},
-  publisher={ACM New York, NY, USA}
+@article{lee2001lrfu,
+  title={LRFU: A spectrum of policies that subsumes the least recently used and least frequently used policies},
+  author={Lee, Donghee and Choi, Jongmoo and Kim, Jong-Hun and Noh, Sam H and Min, Sang Lyul and Cho, Yookun and Kim, Chong Sang},
+  journal={IEEE transactions on Computers},
+  volume={50},
+  number={12},
+  pages={1352--1361},
+  year={2001},
+  publisher={IEEE Computer Society}
 }
 @inproceedings{aksu2015graph,
   title={Graph aware caching policy for distributed graph stores},
@@ -266,7 +207,8 @@
   booktitle={2015 IEEE International Conference on Cloud Engineering},
   pages={6--15},
   year={2015},
-  organization={IEEE}
+  organization={IEEE},
+  notes={CBGA thingy}
 }
 @article{bok2020memory,
   title={In-memory caching for enhancing subgraph accessibility},
@@ -339,4 +281,13 @@
   pages={1--31},
   year={2017},
   publisher={ACM New York, NY, USA}
+}
+@article{zipf1929relative,
+  title={Relative frequency as a determinant of phonetic change},
+  author={Zipf, George Kingsley},
+  journal={Harvard studies in classical philology},
+  volume={40},
+  pages={1--95},
+  year={1929},
+  publisher={JSTOR}
 }
