--- a/thesis.sty
+++ b/thesis.sty
@@ -44,6 +44,7 @@
             citecolor=gray
            ]{hyperref} % Make links clickable and generate bookmarks (so you can easily click through in acroread)
 \usepackage{lineno}                   % Include line numbers
+\usepackage{csquotes}
 \usepackage{longtable}                % Make tables that can cover multiple pages
 \usepackage[section]{placeins}        % Prevent floats from passing beyond \FloatBarrier; keep floats within their sections
 \usepackage{url}                      % Make it possible to define clickable urls
