Started system architecture chapter

--- a/appendices/main.tex
+++ b/appendices/main.tex
@@ -1,3 +1,5 @@
-\chapter{My First Appendix}
+\chapter{System Details}
+\section{Query Evaluation}\label{sec:queryEvaluation}
+
 In this file (appendices/main.tex) you can add appendix chapters, just as you did in the thesis.tex file for the `normal' chapters.
 You can also choose to include everything in this single file, whatever you prefer.
