Added figures and more text to architecture chapter

--- a/references.bib
+++ b/references.bib
@@ -291,3 +291,15 @@
   year={1929},
   publisher={JSTOR}
 }
+@article{duff1984computer,
+  title={Computer solution of large sparse positive definite systems (alan
+         george and joseph w. liu)},
+  author={Duff, Iain S},
+  journal={Siam Review},
+  volume={26},
+  number={2},
+  pages={289--291},
+  year={1984},
+  publisher={SIAM},
+  notes={CSR Format}
+}
