Added listings and details for parallel DFS

--- a/references.bib
+++ b/references.bib
@@ -303,3 +303,14 @@
   publisher={SIAM},
   notes={CSR Format}
 }
+@article{rao1987parallel,
+  title={Parallel depth first search. part i. implementation},
+  author={Rao, V Nageshwara and Kumar, Vipin},
+  journal={International Journal of Parallel Programming},
+  volume={16},
+  number={6},
+  pages={479--499},
+  year={1987},
+  publisher={Springer},
+  notes={Parallel DFS}
+}
