--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@
 % These commands need to be defined in order to produce a correct and personalized document
 %
 \newcommand{\shortdoctitle}{Master's Thesis}
-\newcommand{\doctitle}{Efficient Graph Processing Using AWS S3}
+\newcommand{\doctitle}{Efficient Graph Traversals Using AWS S3}
 \newcommand{\docsubtitle}{Master Thesis}
 
 \newcommand{\me}{Aditya Chandla}
@@ -86,40 +86,40 @@
 %from here on, start the 'real' page numbering, from 1, with normal digits
 \input{chapters/3_introduction}
 
-\clearemptydoublepage
+\clearpage
 
 \chapter{Preliminaries}\label{chapter:preliminaries}
 \input{chapters/4_preliminaries}
 
-\clearemptydoublepage
+\clearpage
 
 \chapter{System Architecture}\label{chapter:systemArchitecture}
 \input{chapters/5_system_architecture}
 
-\clearemptydoublepage
+\clearpage
 
 \chapter{Evaluation}\label{chapter:evaluation}
 \input{chapters/6_evaluation}
 
-\clearemptydoublepage
+\clearpage
 
 % This can become the discussions section instead of comparisons.
 \chapter{Discussion}\label{chapter:discussion}
 \input{chapters/7_discussion}
 
-\clearemptydoublepage
+\clearpage
 
 \chapter{Conclusion and Future Work}\label{chapter:conclusions}
 \input{chapters/8_conclusions}
 
-\clearemptydoublepage
+\clearpage
 
 %Choose a good bibliography style, plain would do often, but these might be nice too
 %\bibliographystyle{these}
 \bibliographystyle{plain}
 \bibliography{./references}
 
-\clearemptydoublepage
+\clearpage
 
 \appendix
 \addcontentsline{toc}{chapter}{Appendix}
