--- a/thesis.sty
+++ b/thesis.sty
@@ -81,7 +81,7 @@ breaklines=true,                 % sets automatic line breaking
 breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
 %escapeinside={\%*}{*)}           % if you want to add a comment within your code
 deletekeywords={Timestamp},      % We don't use timestamp as a keyword in our case...
-morekeywords={encoding, log, trace, event, string, boolean, float, int},
+%morekeywords={nodeId, level, Set, list, Stack, Queue},
 keywordstyle=\color[rgb]{0,0,1},    %
 commentstyle=\color[rgb]{0.133,0.545,0.133}, %
 stringstyle=\color[rgb]{0.627,0.126,0.941},  %
