Added better introduction

--- a/references.bib
+++ b/references.bib
@@ -314,3 +314,9 @@
   publisher={Springer},
   notes={Parallel DFS}
 }
+@misc{elmasri2016fundamentals,
+  title={Fundamentals of Database Systems 7th ed.},
+  author={Elmasri, Ramez and Navathe, Shamkant B},
+  year={2016},
+  publisher={Pearson}
+}
