Added baseline comparisons

--- a/appendices/main.tex
+++ b/appendices/main.tex
@@ -1,3 +1,11 @@
+\chapter{SNB Schema} \label{sec:schema}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.9\textwidth]{figures/LDBC-Schema}
+    \caption{LDBC SNB Schema}
+    \label{fig:ldbcSchema}
+\end{figure}
+
 \chapter{System Details}
 \section{Query Evaluation}\label{sec:queryEvaluation}
 
