--- a/references.bib
+++ b/references.bib
@@ -4,6 +4,12 @@
   howpublished = {\url{https://aws.amazon.com/s3/}},
   urldate = {2024-07-27}
 }
+@misc{awsEC2,
+  author = {AWS},
+  title = {AWS EC2},
+  howpublished = {\url{https://aws.amazon.com/ec2/}},
+  urldate = {2024-07-27}
+}
 @misc{auroraServerless,
   author = {AWS},
   title = {AWS Aurora Serverless},
