--- a/thesis.sty
+++ b/thesis.sty
@@ -22,6 +22,8 @@
 \usepackage{verbatim}                   % Multiline comments (using \begin{comment}
 \usepackage{datetime}                   % For formatting dates
 \usepackage{array}                      % To add extra line spaces in tables
+\usepackage{caption}
+\usepackage{subcaption}
 
 %\usepackage[colorlinks]{hyperref}
 \usepackage{color}
