started with neo4j

--- a/references.bib
+++ b/references.bib
@@ -108,6 +108,12 @@
   howpublished = {\url{https://neo4j.com/docs/operations-manual/current/installation/requirements/}},
   urldate = {2023-09-30}
 }
+@misc{neo4j,
+  author = {Neo4J},
+  title = {Neo4J},
+  howpublished = {\url{https://neo4j.com}},
+  urldate = {2023-09-30}
+}
 @misc{neptune,
   author = {AWS},
   title = {AWS Neptune Db},
@@ -325,4 +331,15 @@
   author={Elmasri, Ramez and Navathe, Shamkant B},
   year={2016},
   publisher={Pearson}
+}
+@article{kotiranta2022performance,
+  title={Performance of graph and relational databases in complex queries},
+  author={Kotiranta, Petri and Junkkari, Marko and Nummenmaa, Jyrki},
+  journal={Applied sciences},
+  volume={12},
+  number={13},
+  pages={6490},
+  year={2022},
+  publisher={MDPI},
+  notes={Graph databases faster than RDBMS in general}
 }
