Added neo4j: Before grammar check

--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,12 @@
   howpublished = {\url{https://aws.amazon.com/rds/aurora/serverless/}},
   urldate = {2024-07-27}
 }
+@misc{tigergraph,
+  author = {Tigergraph},
+  title = {Tigergraph},
+  howpublished = {\url{https://www.tigergraph.com/}},
+  urldate = {2024-07-27}
+}
 @misc{gcpStorage,
   author = {Google Cloud Platform},
   title = {Google Cloud Storage},
