Finished evaluation: pending grammar check

--- a/references.bib
+++ b/references.bib
@@ -52,6 +52,12 @@
   howpublished = {\url{https://flink.apache.org/}},
   urldate = {2024-07-27}
 }
+@misc{flinkGelly,
+  author = {Apache Software Foundation},
+  title = {Apache Flink Gelly},
+  howpublished = {\url{https://flink.apache.org/2015/08/24/introducing-gelly-graph-processing-with-apache-flink/}},
+  urldate = {2024-07-27}
+}
 @article{sahu2017ubiquity,
   title={The ubiquity of large graphs and surprising challenges of graph processing},
   author={Sahu, Siddhartha and Mhedhbi, Amine and Salihoglu, Semih and Lin, Jimmy and {\"O}zsu, M Tamer},
