Added appendix text and preface

--- a/appendices/main.tex
+++ b/appendices/main.tex
@@ -5,9 +5,6 @@
     \caption{LDBC SNB Schema}
     \label{fig:ldbcSchema}
 \end{figure}
-
-\chapter{System Details}
-\section{Query Evaluation}\label{sec:queryEvaluation}
-
-In this file (appendices/main.tex) you can add appendix chapters, just as you did in the thesis.tex file for the `normal' chapters.
-You can also choose to include everything in this single file, whatever you prefer.
+Figure \ref{fig:ldbcSchema} contains the schema of the dataset that was used in
+this thesis. This schema along with the underlying dataset was generated as per
+the specifications of the LDBC social network benchmark\cite{angles2020ldbc}.
