--- a/references.bib
+++ b/references.bib
@@ -355,3 +355,9 @@
   publisher={MDPI},
   notes={Graph databases faster than RDBMS in general}
 }
+@article{angles2020ldbc,
+  title={The LDBC social network benchmark},
+  author={Angles, Renzo and Antal, J{\'a}nos Benjamin and Averbuch, Alex and Birler, Altan and Boncz, Peter and B{\'u}r, M{\'a}rton and Erling, Orri and Gubichev, Andrey and Haprian, Vlad and Kaufmann, Moritz and others},
+  journal={arXiv preprint arXiv:2001.02299},
+  year={2020}
+}
