Updated figures and added evaluation committee

--- a/thesis.tex
+++ b/thesis.tex
@@ -24,9 +24,9 @@
 \newcommand{\monthYear}{July 2024}
 
 %Be sure to use all the titles for your committee members!!! (their names show up on the very first page!)
-\newcommand{\firstCommitteeMember}{dr. Nikolay Yakovets}
-%\newcommand{\secondCommitteeMember}{Your second Committee Member, usually the daily supervisor}
-%\newcommand{\thirdCommitteeMember}{Your Third Committee Member, usually the external member}
+\newcommand{\firstCommitteeMember}{Dr. Nikolay Yakovets}
+\newcommand{\secondCommitteeMember}{Dr. Robert Brijder}
+\newcommand{\thirdCommitteeMember}{Dr. Francesca Zerbato}
 
 \author{\me}
 
