--- a/titlepage.tex
+++ b/titlepage.tex
@@ -35,6 +35,14 @@ Database Group
 Supervisors:\\
 \begin{tabular}{rl}
     \firstCommitteeMember\\
+\end{tabular}
+
+\vfill
+\large
+Evaluation Committee:\\
+\medskip
+\begin{tabular}{l}
+    \firstCommitteeMember\\
     \secondCommitteeMember\\
     \thirdCommitteeMember\\
 \end{tabular}
