--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,12 @@
   howpublished = {\url{https://neo4j.com}},
   urldate = {2023-09-30}
 }
+@misc{memgraph,
+  author = {Memgraph},
+  title = {Memgraph},
+  howpublished = {\url{https://memgraph.com/}},
+  urldate = {2023-09-30}
+}
 @misc{neptune,
   author = {AWS},
   title = {AWS Neptune Db},
